<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:paddingTop="14dp"
    android:paddingHorizontal="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_below="@id/layout_toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:elevation="25dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background=""
            >
            <ImageView
                android:id="@+id/img_profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/foto_saya" />
            <TextView
                android:id="@+id/text_nim"
                android:textStyle="bold"
                android:text="NIM: "
                app:layout_constraintTop_toBottomOf="@id/img_profile"
                app:layout_constraintStart_toStartOf="@id/img_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/content_nim"
                android:text="@string/nim"
                app:layout_constraintTop_toBottomOf="@id/text_nim"
                app:layout_constraintStart_toStartOf="@id/text_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/text_asal"
                android:textStyle="bold"
                android:text="Asal daerah: "
                app:layout_constraintTop_toBottomOf="@id/content_nim"
                app:layout_constraintStart_toStartOf="@id/img_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/content_asal_daerah"
                android:text="@string/asal_daerah"
                app:layout_constraintTop_toBottomOf="@id/text_asal"
                app:layout_constraintStart_toStartOf="@id/text_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/text_program_studi"
                android:textStyle="bold"
                android:text="Program studi: "
                app:layout_constraintTop_toBottomOf="@id/content_asal_daerah"
                app:layout_constraintStart_toStartOf="@id/img_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/content_program_studi"
                android:text="@string/program_studi"
                app:layout_constraintTop_toBottomOf="@id/text_program_studi"
                app:layout_constraintStart_toStartOf="@id/text_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="20dp"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/text_hobby"
                android:text="My Hobbies"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/content_hobby"
                android:text="@string/hoby"
                app:layout_constraintTop_toBottomOf="@id/text_hobby"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:id="@+id/text_fav_quotes"
                android:text="Fav Quotes"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/content_hobby"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/content_fav_quotes"
                android:text="@string/quotes"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/text_fav_quotes"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginBottom="14dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/logo_linkedln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/linked"
            />
        <TextView
            android:id="@+id/username_instagram"
            android:text="@string/linkedln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/logo_linkedln"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/logo_instagram"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/username_instagram"
            android:src="@drawable/instagram"
            />
        <TextView
            android:text="@string/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/logo_instagram"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
</RelativeLayout>